--- a/client/src/app/admin/usertabs/course-tab.component.html
+++ b/client/src/app/admin/usertabs/course-tab.component.html
@@ -24,13 +24,7 @@
             <div class="row">
                 <p-fileUpload mode="basic" [auto]="true" url="/file/{{user.id}}" name="file" (onBeforeUpload)="loading(true)" (onError)="onUploadDocument($event, true)" (onUpload)="onUploadDocument($event, false)" [chooseLabel]="Locales.uploadDocument"></p-fileUpload>
             </div>
-            <div class="row" *ngIf="selectedBean?.document as doc">
-                <span *ngIf="doc.fileName">
-                    <button pButton icon="pi pi-times" style="padding: 0; font-size: 9px;" (click)="deleteDocument(doc)"></button>&nbsp;&nbsp;
-                    <a href="{{baseURL}}/file/{{user.id}}/{{doc.id}}?token={{token}}" download>{{Locales.download}}</a>&nbsp;&nbsp;
-                    <b>{{doc.fileName}}</b> - {{doc.size}} bytes
-                </span>
-            </div>
+            <admin-prewview [user]="user" [formGroup]="formGroup" [selectedBean]="selectedBean"></admin-prewview>
         </div>
     </div>
 </form>
