--- a/client/src/app/admin/usertabs/user-tab.component.html
+++ b/client/src/app/admin/usertabs/user-tab.component.html
@@ -17,17 +17,7 @@
             <label>{{Locales.notes}}</label>
             <textarea formControlName="content" pInputTextarea [rows]="11"></textarea>
         </div>
-        <div class="row" *ngIf="selectedBean?.document as doc">
-            <div *ngIf="doc.id && doc.fileName">
-                <h3>{{Locales.preview}}</h3>
-                <img style="max-width: 100%" src="{{baseURL}}/file/{{user.id}}/{{doc.id}}?token={{token}}" onerror="this.src='assets/no-image-available.jpeg';"/>
-            </div>
-            <div *ngIf="doc.fileName" class="row" style="margin-top: 20px">
-                <button pButton icon="pi pi-times" style="padding: 0; font-size: 9px;" (click)="deleteDocument(doc)"></button>&nbsp;&nbsp;
-                <a href="{{baseURL}}/file/{{user.id}}/{{doc.id}}?token={{token}}" download>{{Locales.download}}</a>&nbsp;&nbsp;
-                <b>{{doc.fileName}}</b> - {{doc.size}} bytes
-            </div>
-        </div>
+        <admin-prewview [user]="user" [formGroup]="formGroup" [selectedBean]="selectedBean"></admin-prewview>
     </div>
 </form>
 <div class="row footer left">
