--- a/client/src/assets/less/constants.less
+++ b/client/src/assets/less/constants.less
@@ -2,7 +2,7 @@
 @footer-height: 5vh;
 @left-menu-width: 12rem;
 @menu-close-speed: 0.3s;
-@modal-top: @topbar-height + 1;
+@modal-top: @topbar-height;
 
 .noselect() {
     -webkit-touch-callout: none;
