--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -43,10 +43,6 @@ app-toast {
     vertical-align: middle;
 }
 
-.hand {
-    cursor: pointer;
-}
-
 .p-grid {
     display: -ms-flexbox;
     display: flex;
@@ -61,7 +57,12 @@ app-toast {
 }
 
 .gap {
-    padding-right: 1rem;
+    margin-right: 1rem;
+}
+
+.gap-row > * {
+    margin-right: 1rem;
+    display: inline-block;
 }
 
 .noselect {
