--- a/client/src/app/admin/usertabs/course-tab.component.html
+++ b/client/src/app/admin/usertabs/course-tab.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="formGroup" #myForm="ngForm" class="p-grid">
     <div class="ui-fluid p-md-7">
-        <div class="row">
-            <p-checkbox [label]="Locales.isSuspended" binary="true" formControlName="isSuspended" class="gap"></p-checkbox>
+        <div class="row gap-row">
+            <p-checkbox [label]="Locales.isSuspended" binary="true" formControlName="isSuspended"></p-checkbox>
             <p-checkbox [label]="Locales.isWithdrawn" binary="true" formControlName="isWithdrawn"></p-checkbox>
         </div>
         <div class="row">
