--- a/client/src/app/component/ft-dialog/ft-dialog.component.less
+++ b/client/src/app/component/ft-dialog/ft-dialog.component.less
@@ -65,7 +65,7 @@ p-tabview {
         top: 0;
         bottom: 60px;
         overflow: auto;
-        padding: 0.571em 1em;
+        padding: 0.6em 1em, 0.1em;
         border-bottom: 1px dashed #c8c8c8;
     }
 
