--- a/client/src/assets/less/theme.less
+++ b/client/src/assets/less/theme.less
@@ -655,6 +655,7 @@ input[type=submit] {
 .ui-autocomplete {
 	width: @width9;
 	position: relative;
+	display: block;
 
 	.ui-inputtext {
 		border-top-right-radius: 0;
