--- a/client/src/app/component/ft-table/ft-table.component.less
+++ b/client/src/app/component/ft-table/ft-table.component.less
@@ -51,6 +51,15 @@ th {
     }
 }
 
+.circle {
+    border-radius: 50%;
+    font-size: 1.1rem;
+    min-width: 2rem;
+    width: 2rem;
+    height: 2rem;
+    padding: 0
+}
+
 .chips {
     padding: 0 5px;
     width: 100%;
