--- a/client/src/app/admin/user.component.html
+++ b/client/src/app/admin/user.component.html
@@ -10,7 +10,7 @@
       </div>
       <ft-table sortField="last" filter="admin-table" [columns]="cols" [result]="result" (onNotify)="eventTableHandler($event)">
         <ng-template pTemplate="firstHeader">
-          <button pButton icon="pi pi-plus-circle" style="border-radius: 50%; font-size: 1.1rem; min-width: 2rem; width: 2rem; height: 2rem; padding: 0" (click)="onAddUser()"></button>
+          <button pButton icon="pi pi-plus-circle" class="circle" (click)="onAddUser()"></button>
         </ng-template>
         <ng-template pTemplate="firstColumn" let-rowData="$implicit" *ngIf="AppUtils.isEditorAccess()">
           <fa-icon [icon]="icons.faPencil" (click)="onEdit(rowData)" style="cursor: pointer"></fa-icon>
@@ -54,11 +54,11 @@
         <ng-template pTemplate="{{Locales.endorsements}}" let-user="item">
           <endorsement-tab [user]="user"></endorsement-tab>
         </ng-template>
+        <ng-template pTemplate="{{Locales.activities}}" let-user="item">
+          <activity-tab [user]="user"></activity-tab>
+        </ng-template>
         <ng-template pTemplate="{{Locales.addresses}}" let-user="item">
           <address-tab [user]="user"></address-tab>
-        </ng-template>
-        <ng-template pTemplate="Activity/Currencies" let-user="item">
-          <course-tab [user]="user"></course-tab>
         </ng-template>
         <ng-template pTemplate="{{Locales.documents}}" let-user="item">
           <document-tab [user]="user"></document-tab>
