--- a/client/src/app/component/ft-dialog/ft-dialog.component.less
+++ b/client/src/app/component/ft-dialog/ft-dialog.component.less
@@ -33,9 +33,10 @@
         min-width: 200px;
         min-height: 300px;
         background: #fff;
-        border: 1px solid #333;
         display: inline-block;
         margin-top: @modal-top;
+        border-radius: 3px;
+        box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
     }
 }
 
