--- a/client/src/assets/less/layout.less
+++ b/client/src/assets/less/layout.less
@@ -8,17 +8,18 @@
     display: inline-block;
 }
 
-.inlineL, .inlineR {
+.inline, .inlineL, .inlineR {
     vertical-align: top;
     display: inline-block;
-    width: 50%;
 }
 .inlineL {
     padding-right: 5px;
+    width: 50%;
 }
 
 .inlineR {
     padding-left: 5px;
+    width: 50%;
 }
 
 .right {
@@ -51,7 +52,6 @@ input[readonly] {
 .breadcrumb {
     width: 100%;
     background: #fff;
-    border: 1px solid #c8c8c8;
     padding: 0.571em 1em;
     font-size: 14px;
     color: #1c8445;
@@ -82,10 +82,16 @@ input[readonly] {
     .p-md-4,
     .p-md-5,
     .p-md-6,
+    .p-md-7,
+    .p-md-8,
+    .p-md-9,
+    .p-md-10,
+    .p-md-11,
     .p-md-12 {
         -ms-flex: 0 0 auto;
         flex: 0 0 auto;
         display: inline-block;
+        vertical-align: top;
     }
 
     .p-md-1 {
