--- a/client/src/app/admin/usertabs/contact-tab.component.html
+++ b/client/src/app/admin/usertabs/contact-tab.component.html
@@ -8,7 +8,7 @@
             <textarea formControlName="content" pInputTextarea [rows]="4"></textarea>
         </div>
         <p class="row">
-            <p-inputSwitch (onChange)="showAddress($event.checked, formGroup.controls)" [(ngModel)]="isAddress" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span style="display: inline-block; padding: 0 10px 5px; vertical-align: text-bottom;">{{Locales.showAddress}}</span>
+            <p-inputSwitch (onChange)="defineAddress($event.checked, formGroup.controls)" [(ngModel)]="isAddress" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span class="defineAddress">{{Locales.defineAddress}}</span>
         </p>
         <div class="row" *ngIf="isAddress">
             <div *ngFor="let control of addressControls" [class]="control.class">
