--- a/client/src/app/admin/usertabs/endorsement-tab.component.html
+++ b/client/src/app/admin/usertabs/endorsement-tab.component.html
@@ -69,7 +69,7 @@
                 </ng-template>
                 <ng-template pTemplate="paginatorright">
                     <div style="margin-right: 10px; margin-top: 5px">
-                    {{Locales.total}}: {{result?.total}}
+                    {{Locales.total}}: {{result?.total || 0}}
                     </div>
                 </ng-template>
             </p-table>
