--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -69,6 +69,12 @@ app-toast {
     .noselect();
 }
 
+.defineAddress {
+    display: inline-block;
+    padding: 0 10px 5px;
+    vertical-align: text-bottom;
+}
+
 .container {
     overflow-y: auto;
     position: relative;
