--- a/client/src/app/admin/course.component.html
+++ b/client/src/app/admin/course.component.html
@@ -12,12 +12,15 @@
                 <ng-template pTemplate="firstHeader">
                     <button pButton icon="pi pi-plus-circle" class="circle" (click)="onAddRate()"></button>
                 </ng-template>
-                <ng-template pTemplate="firstColumn" let-rowData="$implicit" *ngIf="AppUtils.isEditorAccess()">
+                <ng-template pTemplate="firstColumn" let-rowData *ngIf="AppUtils.isEditorAccess()">
                     <fa-icon [icon]="icons.faPencil" (click)="onEdit(rowData)" style="cursor: pointer"></fa-icon>
                 </ng-template>
             </ft-table>
             <ft-dialog width="70" height="60">
-                <ng-template pTemplate="{{Locales.course}}" let-course="item">
+                <ng-template pTemplate="{{Locales.course}}" let-course>
+                    <course-tab [course]="course"></course-tab>
+                </ng-template>
+                <ng-template pTemplate="{{Locales.participants}}" let-course>
                     <course-tab [course]="course"></course-tab>
                 </ng-template>
             </ft-dialog>
