--- a/client/src/app/admin/coursetabs/course-tab.component.html
+++ b/client/src/app/admin/coursetabs/course-tab.component.html
@@ -4,58 +4,27 @@
             <admin-field [parentGroup]="formGroup" [c]="control"></admin-field>
         </div>
         <p class="row">
-            <p-inputSwitch (onChange)="defineLocation($event.checked, formGroup.controls)" [(ngModel)]="isLocation" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span class="defineAddress">{{Locales.defineLocation}}</span>
+            <p-inputSwitch (onChange)="defineLocation($event.checked, formGroup.controls)" [(ngModel)]="isLocation" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span class="switch-span">{{Locales.defineLocation}}</span>
         </p>
         <div class="row" *ngIf="isLocation">
             <div *ngFor="let control of locationControls" [class]="control.class">
-                <admin-field [parentGroup]="formGroup.controls.location" [c]="control" [templates]="{ pobox: pobox }"></admin-field>
+                <admin-field [parentGroup]="formGroup.controls.location" [c]="control"></admin-field>
             </div>
         </div>
     </div>
     <div class="ui-fluid p-md-5">
-        <div class="row">
-            <p-table [value]="result?.data" [lazy]="true" (onLazyLoad)="lazyLoad($event)" [(selection)]="selectedBean"
-                [paginator]="true" [rows]="25" [totalRecords]="result?.total" [scrollable]="true">
-                <ng-template pTemplate="colgroup" let-columns>
-                    <colgroup>
-                    <col [style.width.rem]="5"/>
-                    <col />
-                    <col [style.width.rem]="3" />
-                    </colgroup>
-                </ng-template>
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th>{{Locales.type}}</th>
-                        <th>{{Locales.description}}</th>
-                        <th align="center"><i class="pi pi-check"></i></th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-rowData>
-                    <tr>
-                        <td class="ellipsis" [title]="getType(rowData.type)">{{getType(rowData.type)}}</td>
-                        <td class="ellipsis" [title]="rowData.description">{{rowData.description}}</td>
-                        <td>
-                            <p-tableRadioButton [value]="rowData"></p-tableRadioButton>
-                        </td>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="emptymessage" let-columns>
-                    <tr>
-                        <td [attr.colspan]="3" style="text-align: center;">{{Locales.noData}}</td>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="paginatorright">
-                    <div style="margin-right: 10px; margin-top: 5px">
-                    {{Locales.total}}: {{result?.total || 0}}
-                    </div>
-                </ng-template>
-            </p-table>
+        <div class="row" formGroupName="notes">
+            <label>{{Locales.notes}}</label>
+            <textarea formControlName="content" pInputTextarea [rows]="18"></textarea>
         </div>
+        <p class="row">
+            <p-inputSwitch formControlName="isOnline"></p-inputSwitch><span class="switch-span">{{Locales.isOnlineProgram}}</span>
+        </p>
     </div>
 </form>
-<ng-template #pobox let-group="group">
-    <div class="noshadow" *ngIf="group.controls.type.value != 'Home'" [formGroup]="group">
-        <label>{{Locales.pobox}}</label>
-        <input formControlName="pobox" pInputText maxlength="10"/>
+<div class="row footer left">
+    <button class="ui-button" (click)="onDelete()" [disabled]="!course?.id">{{Locales.delete}}</button>
+    <div class="right">
+        <button pButton (click)="onSubmit()" [label]="Locales.save" [disabled]="!myForm.form.valid"></button>
     </div>
-</ng-template>
+</div>
