--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -69,7 +69,7 @@ app-toast {
     .noselect();
 }
 
-.defineAddress {
+.switch-span {
     display: inline-block;
     padding: 0 10px 5px;
     vertical-align: text-bottom;
