--- a/client/src/app/component/ft-dialog/ft-dialog.component.less
+++ b/client/src/app/component/ft-dialog/ft-dialog.component.less
@@ -44,8 +44,7 @@ p-tabview {
     position: absolute;
     top: 30px;
     bottom: 20px;
-    left: 10px;
-    right: 10px;
+    width: 100%;
 }
 
 .ui-tabview {
@@ -66,7 +65,6 @@ p-tabview {
         top: 0;
         bottom: 60px;
         overflow: auto;
-        padding: 0.6em 1em, 0.1em;
         border-bottom: 1px dashed #c8c8c8;
     }
 
